infrastructure/kube/registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: registry
  labels:
    app: registry
spec:
  containers:
  - name: registry
    image: registry:2
    imagePullPolicy: Always
    ports:
    - containerPort: 5000
    volumeMounts:
    - mountPath: /var/lib/registry
      name: registry-data
  volumes:
  - name: registry-data
    emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: registry-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: registry
